# VTKTests

./: .gitignore  CMakeLists.txt  GraphWidget.cpp  GraphWidget.h  GraphWidget.ui  Interfaces.h  README  VTKTests.pro  VolumePropertiesController.cpp  VolumePropertiesController.h  VtkTestWindow.cpp  VtkTestWindow.h  VtkTests.cpp  VtkTests.h  VtkTestsImage2DWindow.cpp  VtkTestsImage2DWindow.h  VtkTestsImage2DWindow.ui  VtkTestsVolume.cpp  fourwindowstest.cpp  fourwindowstest.h  fourwindowstest.ui  imageactortest.cpp  imageactortest.h  imageslicertest.cpp  imageslicertest.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  superbuild.xml  superbuild_debug.xml  superbuild_release.xml
BrainMap/data/: brain.mhd  brain.raw  data_set.xml  energy.mhd
BrainMap/volume/: CMakeLists.txt  MainWindow.cxx  MainWindow.h  MainWindow.ui  compilation.html  download_data.py  main.cxx
GeneratedCTKPlugin/Generated.CTK/: CMakeLists.txt  GeneratedCTKPlugin.cpp  GeneratedCTKPlugin_p.h
SimpleCTKPlugin/: CMakeLists.txt  SimpleCTKPlugin.cpp  SimpleCTKPlugin.h
SimpleQtPlugin/: CMakeLists.txt  SimpleQtPlugin.cpp  SimpleQtPlugin.h
ro.navicad.CTKDicom/: CMakeLists.txt  manifest_headers.cmake  navicadCTKDicomPlugin.cpp  navicadCTKDicomPlugin.h  navicadCTKDicomPluginInterface.h  target_libraries.cmake
ro.navicad.VTKDicom/: CMakeLists.txt  navicadVTKDicomPlugin.cpp  navicadVTKDicomPlugin.h  navicadVTKDicomPluginInterface.h  pluginInterfaceWidget.ui
src/: main.cpp
src/qml/: main.qml
